# SummarizeDocsProject

./: .gitignore  README.md  pyproject.toml  summarize.md
knowledge/: user_preference.txt
src/summarize_docs_project/: app.py  crew.py  main.py  resumo.md  summarize.md
src/summarize_docs_project/config/: agents.yaml  tasks.yaml
src/summarize_docs_project/tools/: __init__.py  custom_tool.py
