[project]
name = "summarize_docs_project"
version = "0.1.0"
description = "summarize_docs_project using crewAI"
authors = [{ name = "Matheus Borges", email = "borgesmatheus1201@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "docling>=2.25.0",
]

[project.scripts]
summarize_docs_project = "summarize_docs_project.main:run"
run_crew = "summarize_docs_project.main:run"
train = "summarize_docs_project.main:train"
replay = "summarize_docs_project.main:replay"
test = "summarize_docs_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
